templates/k8s/frontend/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ${INGRESS_STRIP_NAME}
  namespace: ${NAMESPACE}
spec:
  stripPrefix:
    prefixes:
      - ${INGRESS_STRIP_PREFIX}
